CHANGELOG
=========

All notable changes to the screensy project will be documented in this file.

The format is based on Keep a Changelog [0], and this project adheres to
Semantic Versioning [1].


UNRELEASED
----------


1.0.3 - 2021-06-06
------------------

Fixed:
- The room name generator to use more words.


1.0.2 - 2021-06-03
------------------

Changed:
- The website Dockerfile to use a specific version of TypeScript.


1.0.1 - 2021-03-18
------------------

Changed:
- WebSocket protocol choice to be based on whether HTTPS is used.
- WebSocket URL to include the current path. This allows screensy to be hosted
  on a path that is not the root path.

Removed:
- Version number in rendezvous-server package.json.


1.0.0 - 2021-03-16
------------------

Added:
- The static index.html file for the website.
- The client-side TypeScript code.
- The stylesheet for the website.
- A tsconfig.json file for the client-side TypeScript.
- The rendezvous server TypeScript code.
- A Dockerfile for the rendezvous server.
- A Dockerfile for the website.
- A docker-compose file for easy deployment.
- A Caddyfile.
- A README.

[0]: https://keepachangelog.com/en/1.0.0/
[1]: https://semver.org/spec/v2.0.0.html