@@ -1,7 +1,7 @@
                                     SCREENSY
 
                         Stef Gijsberts, Marijn van Wezel
-                                   2021-03-16
+				 May 13th, 2021
 
 
 Screensy is a simple screen sharing solution. Nothing more, nothing less.
@@ -13,7 +13,7 @@ directly sent from the browser of the broadcaster to the browser of each
 viewer. All traffic (between rendezvous and browser and between browsers) is
 encrypted by default.
 
-There are two ways to set screensy up. If you don't know which one to choose,
+There are two ways to set up screensy. If you don't know which one to choose,
 we recommend using Docker.
 
 
@@ -48,7 +48,18 @@ SERVER SETUP (WITH DOCKER)
     	reverse_proxy @rendezvous rendezvous:4000
     }
 
-5. Start the Docker containers using Docker Compose, by running the following
+5. Change the value of the "external-ip" setting in the included
+   "turnserver.conf" from "localhost" to your domain. For example if you want
+   to host screensy on the domain "example.com", the first two lines of your
+   "turnserver.conf" should look like this:
+
+    # Set the value below to your public IP address or domain.
+    external-ip=example.com
+
+6. Make sure the required ports are accessible. We listed these ports at the
+   bottom of this document. 
+
+7. Start the Docker containers using Docker Compose, by running the following
    command:
 
     docker-compose up -d
@@ -63,6 +74,8 @@ SERVER SETUP (WITHOUT DOCKER)
     - A TypeScript compiler
     - A static file server (we recommend Caddy)
     - A reverse proxy that supports WebSocket (again, we recommend Caddy)
+    - A STUN server (we recommend Coturn)
+    - A TURN server (again, we recommend Coturn)
 
 2. Clone this repository and navigate to it, using the following commands:
 
@@ -80,9 +93,12 @@ SERVER SETUP (WITHOUT DOCKER)
     cd screensy-rendezvous && tsc && cd ..
     cd screensy-website && tsc && cd ..
 
-5. Set up the static file server to serve the files in the "screensy-website"
+5. Make sure the required ports are accessible. We listed these ports at the
+   bottom of this document. 
+
+6. Set up the static file server to serve the files in the "screensy-website"
    directory. Do not use the standard port "80" for this, as it will conflict
-   with the reverse proxy we will set up in step 7.
+   with the reverse proxy we will set up in step 9.
 
    We use the following Caddyfile for this:
 
@@ -94,7 +110,17 @@ SERVER SETUP (WITHOUT DOCKER)
             file_server
     }
 
-6. Start the rendezvous server located in "screensy-rendezvous" directory,
+7. Set up the STUN and TURN server. Use the long-term credential mechanism with
+   the username "screensy" and the password "screensy". We use the following
+   "turnserver.conf" for this:
+
+    external-ip=localhost
+    listening-port=3478
+    user=screensy:screensy
+    lt-cred-mech
+    realm=screensy
+
+8. Start the rendezvous server located in "screensy-rendezvous" directory,
    using the following commands:
 
     cd screensy-rendezvous
@@ -103,7 +129,7 @@ SERVER SETUP (WITHOUT DOCKER)
 
    This starts a WebSocket server on port 4000.
 
-7. Reverse proxy both the static file server and the rendezvous server. We use
+9. Reverse proxy both the static file server and the rendezvous server. We use
    the following Caddyfile for this:
 
     example.com {
@@ -118,3 +144,19 @@ SERVER SETUP (WITHOUT DOCKER)
     }
 
    Keep in mind that most web browsers require HTTPS for WebRTC to work.
+
+
+PORTS
+-----
+
+The following ports need to be accessible by the client for screensy to work.
+
++-------------+----------+-----------+
+| Port number | Protocol | Service   |
++-------------+----------+-----------+
+| 80          | TCP      | HTTP      |
+| 443         | TCP      | HTTPS     |
+| 3478        | TCP/UDP  | STUN/TURN |
+| 49152-65535 | UDP      | TURN      |
++-------------+----------+-----------+
+
