@@ -1,0 +1,27 @@
+# Set the value below to your public IP address or domain.
+external-ip=localhost
+
+# Set the TURN/STUN server listener port for UDP and TCP.
+listening-port=3478
+
+# Create a default static user account with username "screensy" and password
+# "screensy".
+user=screensy:screensy
+
+# Use long-term credential mechanism to prevent completely anonymous access by
+# spammers.
+lt-cred-mech
+
+# Set the realm to be used for the users. Required by lt-cred-mech.
+realm=screensy
+
+# Turn off the CLI support since we do not support it.
+no-cli
+
+# Do not start TLS client listener since we do not support it. This is not
+# dangerous, since even with an unencrypted TURN server, the WebRTC data cannot
+# be compromised.
+no-tls
+
+# Do not start DTLS client listener since we do not support it.
+no-dtls
